Names changed and gym map added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
   <div class="container">
-    <h1>Welcome to Medilab</h1>
+    <h1>Bem Vindo ao CTE Bicame</h1>
     <h2>We are team of talented designers making websites with Bootstrap</h2>
     <a href="#about" class="btn-get-started scrollto">Get Started</a>
   </div>
@@ -564,7 +564,7 @@
     </div>
 
     <div>
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+      <div style="width: 100%"><iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=R.%20Domingos%20Rodrigues,%20320%20-%20Olaria,%20Nova%20Lima%20-%20MG,%2034000-000+(Bicame%20CTE)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html">area maps</a></iframe></div>
     </div>
 
     <div class="container">
@@ -574,20 +574,20 @@
           <div class="info">
             <div class="address">
               <i class="bi bi-geo-alt"></i>
-              <h4>Location:</h4>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <h4>Localização:</h4>
+              <p>R. Domingos Rodrigues, 320 - Olaria, Nova Lima - MG</p>
             </div>
 
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p>bicamecte@gmail.com</p>
             </div>
 
             <div class="phone">
               <i class="bi bi-phone"></i>
-              <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <h4>Telefone:</h4>
+              <p>+55 31 97507-4624</p>
             </div>
 
           </div>
