adding about page and change some components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center">
 
-    <h1 class="logo me-auto"><a href="index.html">Medilab</a></h1>
+    <h1 class="logo me-auto"><a href="index.html">Bicame CTE</a></h1>
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
-        <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
+        <li><a class="nav-link scrollto" href="#sobre"routerLink="/sobre" routerLinkActive="active">Sobre</a></li>
         <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
         <li><a class="nav-link scrollto" href="#departments">Departments(TODO)</a></li>
         <li><a class="nav-link scrollto" href="#doctors">Professores</a></li>
@@ -17,7 +17,9 @@
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
+
     <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a>
 
   </div>
 </header><!-- End Header -->
+
