--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,13 @@
       <div class="row">
         <div class="col-lg-4 d-flex align-items-stretch">
           <div class="content">
-            <h3>Why Choose Medilab?</h3>
+            <h3>Porquê escolher o Bicame?</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
               Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
             </p>
             <div class="text-center">
-              <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
+              <a href="#" class="more-btn">Leia mais <i class="bx bx-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -54,11 +54,7 @@
               </div>
             </div>
           </div><!-- End .content-->
-          <div class="icon-box">
-            <div class="icon"><i class="fas fa-wheelchair"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-          </div>
+
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
@@ -703,3 +699,4 @@
   </div>
 </footer>
 <!-- End Footer -->
+<router-outlet> </router-outlet>
