--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,8 +16,9 @@
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
+    <a href="#appointment" class="appointment-btn scrollto" routerLink="/loginAluno"> Sou Aluno </a>
+    <a href="#appointment" class="appointment-btn scrollto" routerLink="/loginProfessor"> Sou Professor </a>
 
-    <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a>
 
   </div>
 </header><!-- End Header -->
