--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,9 +3,8 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
   <div class="container">
-    <h1>Bem Vindo ao CTE Bicame</h1>
-    <h2>We are team of talented designers making websites with Bootstrap</h2>
-    <a href="#about" class="btn-get-started scrollto">Get Started</a>
+    <h1 id="textWhite">Bem Vindo ao CTE Bicame</h1>
+    <h2 id="textWhite">Somos uma equipe destinada ao seu preparo físico!</h2>
   </div>
 </section><!-- End Hero -->
 
@@ -34,21 +33,21 @@
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
+                  <h4>Compromisso</h4>
                   <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
+                  <h4>Responsabilidade</h4>
                   <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
+                  <i class="bx bx-book"></i>
+                  <h4>Dedicação</h4>
                   <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
                 </div>
               </div>
