--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -266,7 +266,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-1.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-1.png" class="img-fluid">
             </a>
           </div>
         </div>
@@ -274,7 +274,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-2.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-2.png" alt="" class="img-fluid">
             </a>
           </div>
         </div>
@@ -282,7 +282,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-3.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-3.png" class="img-fluid">
             </a>
           </div>
         </div>
@@ -290,7 +290,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-4.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-4.png" alt="" class="img-fluid">
             </a>
           </div>
         </div>
@@ -298,7 +298,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-5.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-5.png" alt="" class="img-fluid">
             </a>
           </div>
         </div>
@@ -306,7 +306,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-6.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-6.png" class="img-fluid">
             </a>
           </div>
         </div>
@@ -314,7 +314,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-7.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-7.png" alt="" class="img-fluid">
             </a>
           </div>
         </div>
@@ -322,7 +322,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item">
             <a href="assets/img/gallery/gallery-8.jpg" class="galelry-lightbox">
-              <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <img src="assets/img/gallery/gallery-8.png" alt="" class="img-fluid">
             </a>
           </div>
         </div>
