alteracoes de layout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
         <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
         <li><a class="nav-link scrollto" href="#sobre" routerLink="/sobre" routerLinkActive="active">Sobre</a></li>
         <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-        <li><a class="nav-link scrollto" href="#departments">Departments(TODO)</a></li>
+        <li><a class="nav-link scrollto" href="#departments">Modalidades</a></li>
         <li><a class="nav-link scrollto" href="#doctors">Professores</a></li>
            <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
       </ul>
