--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -19,8 +19,7 @@
           <div class="content">
             <h3>Porquê escolher o Bicame?</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+              Quer cuidar do corpo e contar com a orientação dos melhores profissionais do mercado? Então venha para a Bicame! Aqui você encontra infraestrutura de ponta, aulas personalizadas e um atendimento acolhedor. Comece hoje mesmo a mudar sua vida!
             </p>
             <div class="text-center">
               <a href="#" class="more-btn">Leia mais <i class="bx bx-chevron-right"></i></a>
@@ -56,13 +55,13 @@
 
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <!--<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="fas fa-notes-medical"></i></div>
             <h4><a href="">Divera don</a></h4>
             <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
           </div>
-        </div>
+        </div>-->
 
       </div>
 
@@ -104,11 +103,10 @@
               <div class="row gy-4">
                 <div class="col-lg-8 details order-2 order-lg-1">
                   <h3>Musculação</h3>
-                  <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                  <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                  <p class="fst-italic">A musculação melhora o condicionamento cardiorrespiratório, diminui a quantidade de gordura, auxilia o emagrecimento, diminui o risco de diabetes, aumenta a autonomia em idosos e garante mais disposição física.</p>
                 </div>
                 <div class="col-lg-4 text-center order-1 order-lg-2">
-                  <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/departments-1.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -116,11 +114,10 @@
               <div class="row gy-4">
                 <div class="col-lg-8 details order-2 order-lg-1">
                   <h3>Spinning</h3>
-                  <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                  <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                  <p class="fst-italic">Melhorar a circulação sanguínea nas pernas, combatendo o inchaço; Fortalecer os músculos abdominais quando a aula é feita com a barriga encolhida; Melhora o funcionamento cardíaco e respiratório, diminui o colesterol e ajuda no controle da taxa de glicose no sangue.</p>
                 </div>
                 <div class="col-lg-4 text-center order-1 order-lg-2">
-                  <img src="assets/img/departments-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/departments-2.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -128,11 +125,10 @@
               <div class="row gy-4">
                 <div class="col-lg-8 details order-2 order-lg-1">
                   <h3>Crossfit</h3>
-                  <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                  <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                  <p class="fst-italic">Considerado um tipo de treino funcional de alta intensidade, o crossfit se destaca por trabalhar todas as partes do corpo - promovendo uma maior resistência muscular, força, equilíbrio, flexibilidade, velocidade, potência e coordenação motora.</p>
                 </div>
                 <div class="col-lg-4 text-center order-1 order-lg-2">
-                  <img src="assets/img/departments-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/departments-3.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -140,11 +136,10 @@
               <div class="row gy-4">
                 <div class="col-lg-8 details order-2 order-lg-1">
                   <h3>Calistenia</h3>
-                  <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
-                  <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
+                  <p class="fst-italic">A calistenia é um tipo de treino que tem como principal objetivo trabalhar a força e a resistência muscular. E o mais legal – nenhum equipamento é necessário, afinal, um dos princípios da calistenia é a utilização do peso do próprio corpo para o treinamento.</p>
                 </div>
                 <div class="col-lg-4 text-center order-1 order-lg-2">
-                  <img src="assets/img/departments-4.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/departments-4.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -152,11 +147,10 @@
               <div class="row gy-4">
                 <div class="col-lg-8 details order-2 order-lg-1">
                   <h3>Muay-Thai</h3>
-                  <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                  <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                  <p class="fst-italic">O boxe e o muay thai são esportes excelentes para desenvolver o corpo: eles tonificam os músculos e diminuem o percentual de gordura de forma rápida e eficiente. Quem pratica com regularidade e mantém uma dieta balanceada percebe em pouco tempo a diferença no físico.</p>
                 </div>
                 <div class="col-lg-4 text-center order-1 order-lg-2">
-                  <img src="assets/img/departments-5.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/departments-5.png" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -172,7 +166,7 @@
 
       <div class="section-title">
         <h2>Professores</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Conheça nossos professores.</p>
       </div>
 
       <div class="row">
@@ -181,9 +175,8 @@
           <div class="member d-flex align-items-start">
             <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
-              <h4>Walter White</h4>
-              <span>Chief Medical Officer</span>
-              <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+              <h4>Pablo Lucas</h4>
+              <span>Personal trainer</span>
               <div class="social">
                 <a href=""><i class="ri-twitter-fill"></i></a>
                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -198,9 +191,8 @@
           <div class="member d-flex align-items-start">
             <div class="pic"><img src="assets/img/doctors/doctors-2.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
-              <h4>Sarah Jhonson</h4>
-              <span>Anesthesiologist</span>
-              <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+              <h4>Leonardo Barbosa</h4>
+              <span>Personal trainer</span>
               <div class="social">
                 <a href=""><i class="ri-twitter-fill"></i></a>
                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -215,9 +207,8 @@
           <div class="member d-flex align-items-start">
             <div class="pic"><img src="assets/img/doctors/doctors-3.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
-              <h4>William Anderson</h4>
-              <span>Cardiology</span>
-              <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+              <h4>Nicolas Daldegan</h4>
+              <span>Personal trainer</span>
               <div class="social">
                 <a href=""><i class="ri-twitter-fill"></i></a>
                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -232,9 +223,8 @@
           <div class="member d-flex align-items-start">
             <div class="pic"><img src="assets/img/doctors/doctors-4.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
-              <h4>Amanda Jepson</h4>
-              <span>Neurosurgeon</span>
-              <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+              <h4>Caio Henrique</h4>
+              <span>Personal trainer</span>
               <div class="social">
                 <a href=""><i class="ri-twitter-fill"></i></a>
                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -255,8 +245,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Gallery</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Galeria</h2>
+        <p>Um pouco da nossa academia!</p>
       </div>
     </div>
 
@@ -337,8 +327,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>COntato</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Contato</h2>
+        <p>Fale conosco!</p>
       </div>
     </div>
 
@@ -391,11 +381,11 @@
               <textarea class="form-control" name="message" rows="5" placeholder="Mensagem" required></textarea>
             </div>
             <div class="my-3">
-              <div class="loading">Loading</div>
+              <div class="loading">Carregando</div>
               <div class="error-message"></div>
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+            <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
           </form>
 
         </div>
