--- a/src/app/views/login-aluno/login-aluno.component.html
+++ b/src/app/views/login-aluno/login-aluno.component.html
@@ -34,9 +34,10 @@
                     <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
                   </div>
 
-                  <a class="small text-muted" href="#!">Esquece a senha?</a>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Não tem uma conta? <a  routerLink="register" href="#register"
+                  <a class="small text-muted" routerLink="esqueceu-senha" href="esqueceu-senha">Esqueceu a senha?</a>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Não tem uma conta? <a  routerLink="/register" href="register"
                       style="color: #393f81;"> Registre-se</a></p>
+                      
 
                 </form>
 
