--- a/src/app/views/login-professor/login-professor.component.html
+++ b/src/app/views/login-professor/login-professor.component.html
@@ -34,7 +34,7 @@
                     <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button>
                   </div>
 
-                  <a class="small text-muted" href="#!">Esquece a senha?</a>
+                  <a class="small text-muted" routerLink= "/esqueceu-senha" href="esqueceu-senha">Esquece a senha?</a>
 
 
                 </form>
