--- a/src/app/views/esqueceu-senha/esqueceu-senha.component.html
+++ b/src/app/views/esqueceu-senha/esqueceu-senha.component.html
@@ -1,1 +1,37 @@
-<p>esqueceu-senha works!</p>
+<div>
+    <div class="container">
+        <form>
+            <div class="row mb-3">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">Digite seu e-mail</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3">
+              </div>
+            </div>
+    
+            <div class="row mb-3">
+              <label for="inputCPF3" class="col-sm-2 col-form-label">Seu CPF</label>
+              <div class="col-sm-10">
+                <input type="CPF" class="form-control" id="inputCPF3">
+              </div>
+            </div>
+    
+            <div class="row mb-3">
+                <label for="inputSenha3" class="col-sm-2 col-form-label">Digite uma senha nova</label>
+                <div class="col-sm-10">
+                  <input type="senha" class="form-control" id="inputsenha3">
+                </div>
+              </div>
+    
+            <div class="row mb-3">
+                <label for="inputSenha23" class="col-sm-2 col-form-label">Dgite a senha novamente</label>
+                <div class="col-sm-10">
+                  <input type="senha2" class="form-control" id="inputsenha23">
+                </div>
+            </div>
+    
+            
+            
+            <button type="submit" class="btn btn-primary">Salvar</button>
+          </form>
+    </div>
+</div>
