tela recuperaçao pronta

--- a/src/app/views/esqueceu-senha/esqueceu-senha.component.html
+++ b/src/app/views/esqueceu-senha/esqueceu-senha.component.html
@@ -1,37 +1,55 @@
-<div>
-    <div class="container">
-        <form>
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Digite seu e-mail</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
+<section class="vh-100" style="background-color: #9A616D;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block">
+              <img src= "assets\img\rec-senha.png"
+                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+
+                <form>
+
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">BicameCTE</span>
+                  </div>
+
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Recupere sua senha</h5>
+
+                  <div class="form-outline mb-4">
+                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example17">Digite seu Email</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example17">Digite seu CPF</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example27">Digite uma nova Senha</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example27">Repita a senha novamente</label>
+                  </div>
+
+                  <div class="pt-1 mb-4">
+                    <button class="btn btn-dark btn-lg btn-block" type="button">Salvar</button>
+                  </div>
+                </form>
+
               </div>
             </div>
-    
-            <div class="row mb-3">
-              <label for="inputCPF3" class="col-sm-2 col-form-label">Seu CPF</label>
-              <div class="col-sm-10">
-                <input type="CPF" class="form-control" id="inputCPF3">
-              </div>
-            </div>
-    
-            <div class="row mb-3">
-                <label for="inputSenha3" class="col-sm-2 col-form-label">Digite uma senha nova</label>
-                <div class="col-sm-10">
-                  <input type="senha" class="form-control" id="inputsenha3">
-                </div>
-              </div>
-    
-            <div class="row mb-3">
-                <label for="inputSenha23" class="col-sm-2 col-form-label">Dgite a senha novamente</label>
-                <div class="col-sm-10">
-                  <input type="senha2" class="form-control" id="inputsenha23">
-                </div>
-            </div>
-    
-            
-            
-            <button type="submit" class="btn btn-primary">Salvar</button>
-          </form>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+</section>
