--- a/src/app/views/esqueceu-senha/esqueceu-senha.component.html
+++ b/src/app/views/esqueceu-senha/esqueceu-senha.component.html
@@ -31,17 +31,19 @@
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example27">Digite uma nova Senha</label>
-                  </div>
-
-                  <div class="form-outline mb-4">
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example27">Repita a senha novamente</label>
+                    <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+                      <option selected disabled value="">Escolha...</option>
+                      <option>Professor</option>
+                      <option>Aluno</option>
+                    </select>
+                    <label for="validationServer04" class="form-label">Você é professor ou aluno?</label>
+                    <div id="validationServer04Feedback" class="invalid-feedback">
+                      Por favor selecione uma opção valida
+                    </div>
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="button">Salvar</button>
+                    <a routerLink="/nova-senha" href="nova-senha"><button class="btn btn-dark btn-lg btn-block" type="button">Seguir</button></a>
                   </div>
                 </form>
 
