--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="h-100 bg-dark">
+<section class="h-100" style="background-color: #9A616D;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
@@ -9,8 +9,16 @@
                   alt="Sample photo" class="img-fluid"
                   style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
               </div>
+
+
               <div class="col-xl-6">
                 <div class="card-body p-md-5 text-black">
+
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">BicameCTE</span>
+                  </div>
+
                   <h3 class="mb-5 text-uppercase">Registro de Aluno</h3>
   
                   <div class="row">
@@ -70,7 +78,7 @@
   
                   <div class="d-flex justify-content-end pt-3">
   
-                    <button type="button" class="btn btn-warning btn-lg ms-2">Criar </button>
+                    <button type="button" class="btn btn-dark btn-lg btn-block">Criar </button>
                   </div>
   
                 </div>
