altercaoes tela register

--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -2,10 +2,10 @@
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
-          <div class="card card-registration my-4">
+          <div class="card" style="border-radius: 1rem;">
             <div class="row g-0">
-              <div class="col-xl-6 d-none d-xl-block">
-                <img src="https://cdn.alboompro.com/5e933ac94207f40001348d79_629f3fed9f0b810001a34eb8/large/foto-academia-funcional-redes-sociais-16.JPG?v=1"
+              <div class="col-md-6 col-lg-5 d-none d-md-block">
+                <img src="assets\img\image-register.jpg"
                   alt="Sample photo" class="img-fluid"
                   style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
               </div>
