--- a/src/app/views/login-professor/login-professor.component.html
+++ b/src/app/views/login-professor/login-professor.component.html
@@ -31,7 +31,7 @@
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button>
+                    <a routerLink="/tela-professor" href="tela-professor"> <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button> </a>
                   </div>
 
                   <a class="small text-muted" routerLink= "/esqueceu-senha" href="esqueceu-senha">Esquece a senha?</a>
