--- a/src/app/views/tela-professor/tela-professor.component.html
+++ b/src/app/views/tela-professor/tela-professor.component.html
@@ -1,1 +1,39 @@
-<p>tela-funcionario works!</p>
+<section class="h-100" style="background-color: #9A616D;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col">
+          <div class="card" style="border-radius: 1rem;">
+            <div class="row g-0">
+              <div class="col-md-6 col-lg-5 d-none d-md-block">
+                <img src="assets\img\image-register.jpg"
+                  alt="Sample photo" class="img-fluid"
+                  style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
+              </div>
+
+
+              <div class="col-xl-6">
+                <div class="card-body p-md-5 text-black">
+
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">BicameCTE</span>
+                  </div>
+
+                  <h3 class="mb-5 text-uppercase">Tela do professor</h3>
+
+                  <!--aq-->
+                
+                  </div>
+  
+                  <div class="d-flex justify-content-end pt-3">
+  
+                    <button type="button" class="btn btn-dark btn-lg btn-block">botão</button>
+                  </div>
+  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
