resgistro de alunos

--- a/src/app/views/modalidades/criacao-modalidades/criacao-modalidades.component.html
+++ b/src/app/views/modalidades/criacao-modalidades/criacao-modalidades.component.html
@@ -7,7 +7,7 @@
       <form>
        <div class="col-md-5">
         <div class="form-group">
-          <label for="exampleInputEmail1">Modalidade</label>
+          <label for="nomeModalidade">Modalidade</label>
           <input type="text" name="nomeModalidade" [(ngModel)]="modalidade.nome" class="form-control" id="nomeModalidade" aria-describedby="nomeModalidade" placeholder="Nome da Modalidade">
         </div>
        </div>
