--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -10,7 +10,6 @@
                   style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
               </div>
 
-
               <div class="col-xl-6">
                 <div class="card-body p-md-5 text-black">
 
@@ -20,67 +19,37 @@
                   </div>
 
                   <h3 class="mb-5 text-uppercase">Registro de Aluno</h3>
-  
+
                   <div class="row">
-                    <div class="col-md-6 mb-4">
+                    <div class="col-md-12 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example1m" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example1m">Nome</label>
-                      </div>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                      <div class="form-outline">
-                        <input type="text" id="form3Example1n" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example1n">Sobrenome </label>
+                        <input type="text" [(ngModel)]="aluno.nome" id="nome" name="nome" class="form-control form-control-lg" />
+                        <label class="form-label" for="nome">Nome Completo</label>
                       </div>
                     </div>
                   </div>
-  
+
                   <div class="form-outline mb-4">
-                    <input type="text" id="form3Example8" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example8">CPF</label>
+                    <input type="text" id="cpf" name="cpf" [(ngModel)]="aluno.cpf" class="form-control form-control-lg" maxlength="11" />
+                    <label class="form-label" for="cpf">CPF</label>
                   </div>
-  
-                  <div class="d-md-flex justify-content-start align-items-center mb-4 py-2">
-  
-                    <h6 class="mb-0 me-4">Gênero: </h6>
-  
-                    <div class="form-check form-check-inline mb-0 me-4">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
-                        value="option1" />
-                      <label class="form-check-label" for="femaleGender">Feminino</label>
-                    </div>
-  
-                    <div class="form-check form-check-inline mb-0 me-4">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleGender"
-                        value="option2" />
-                      <label class="form-check-label" for="maleGender">Masculino</label>
-                    </div>
-  
-                    <div class="form-check form-check-inline mb-0">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="otherGender"
-                        value="option3" />
-                      <label class="form-check-label" for="otherGender">Outro</label>
-                    </div>
-  
-                  </div>
-  
+
                   <div class="form-outline mb-4">
-                    <input type="text" id="form3Example97" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example97">Email </label>
+                    <input type="text" id="email" name="email" [(ngModel)]="aluno.email" class="form-control form-control-lg" />
+                    <label class="form-label" for="email">Email </label>
                   </div>
-  
+
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example97" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example97">Senha </label>
-  
+                    <input type="password" id="senha" name="senha" [(ngModel)]="aluno.senha" class="form-control form-control-lg" />
+                    <label class="form-label" for="senha">Senha </label>
+
                   </div>
-  
+
                   <div class="d-flex justify-content-end pt-3">
-  
-                    <button type="button" class="btn btn-dark btn-lg btn-block">Criar </button>
+
+                    <button type="button" (click)="criar()"class="btn btn-dark btn-lg btn-block">Criar </button>
                   </div>
-  
+
                 </div>
               </div>
             </div>
