--- a/src/app/views/login-professor/login-professor.component.html
+++ b/src/app/views/login-professor/login-professor.component.html
@@ -21,20 +21,18 @@
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Entre em sua conta</h5>
 
                   <div class="form-outline mb-4">
-                    <input type="email" id="email" name="email" [(ngModel)]="prof.email" class="form-control form-control-lg" />
+                    <input type="email" id="email" name="email" [(ngModel)]="email" class="form-control form-control-lg" />
                     <label class="form-label" for="email">Email</label>
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" name="senha" id="senha" [(ngModel)]="prof.senha" class="form-control form-control-lg" />
+                    <input type="password" name="senha" id="senha" [(ngModel)]="senha" class="form-control form-control-lg" />
                     <label class="form-label" for="senha">Senha</label>
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <a routerLink="/tela-professor" href="tela-professor"> <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button> </a>
+                    <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button>
                   </div>
-
-                  <a class="small text-muted" routerLink= "/esqueceu-senha" href="esqueceu-senha">Esquece a senha?</a>
 
 
                 </form>
