RouteGuard in teatcherLogin and edit alunos

--- a/src/app/views/tela-professor/tela-professor.component.html
+++ b/src/app/views/tela-professor/tela-professor.component.html
@@ -21,15 +21,19 @@
 
                   <h3 class="mb-5 text-uppercase">Tela do professor</h3>
 
-                  <!--aq-->
-                
+                  <div class="row">
+                    <div class="col-md-6">
+                      <button type="button" class="btn btn-dark btn-lg btn-block">Alunos</button>
+                    </div>
+                    <div class="col-md-6">
+                      <button type="button" class="btn btn-dark btn-lg btn-block">Modalidades</button>
+                    </div>
+
                   </div>
-  
-                  <div class="d-flex justify-content-end pt-3">
-  
-                    <button type="button" class="btn btn-dark btn-lg btn-block">botão</button>
+
                   </div>
-  
+
+
                 </div>
               </div>
             </div>
