--- a/src/app/views/modalidades/edit-modalidades/edit-modalidades.component.html
+++ b/src/app/views/modalidades/edit-modalidades/edit-modalidades.component.html
@@ -6,8 +6,8 @@
       <form>
        <div class="col-md-5">
         <div class="form-group">
-          <label for="exampleInputEmail1">Modalidade</label>
-          <input type="text" [(ngModel)]="modalidade.nome" name="nomeModalidade" class="form-control" id="nomeModalidade" aria-describedby="nomeModalidade" placeholder="Nome da Modalidade">
+          <label for="modalidade">Modalidade:</label>
+          <input type="text" [(ngModel)]="modalidade.nome" name="nomeModalidade" class="form-control" id="modalidade" aria-describedby="modalidade" placeholder="Nome da Modalidade">
         </div>
        </div>
         <button type="button" (click)="update()" class="btn btn-primary" style="margin-top: 1vh;">Editar</button>
