--- a/src/app/views/edit-alunos/edit-alunos.component.html
+++ b/src/app/views/edit-alunos/edit-alunos.component.html
@@ -1,1 +1,16 @@
-<p>edit-alunos works!</p>
+<div class="card">
+  <div class="card-header">
+    Editar um aluno
+  </div>
+  <div class="card-body">
+      <form>
+       <div class="col-md-5">
+        <div class="form-group">
+          <label for="aluno">Aluno:</label>
+          <input type="text" [(ngModel)]="aluno.nome" name="aluno" class="form-control" id="aluno" aria-describedby="aluno" placeholder="Nome do Aluno">
+        </div>
+       </div>
+        <button type="button" (click)="update()" class="btn btn-primary" style="margin-top: 1vh;">Editar</button>
+      </form>
+  </div>
+</div>
