--- a/src/app/views/login-aluno/login-aluno.component.html
+++ b/src/app/views/login-aluno/login-aluno.component.html
@@ -21,23 +21,23 @@
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Entre em sua conta</h5>
 
                   <div class="form-outline mb-4">
-                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example17">Email</label>
+                    <input type="email" id="email"name = "email" [(ngModel)]="email" class="form-control form-control-lg" />
+                    <label class="form-label" for="email">Email</label>
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example27">Senha</label>
+                    <input type="password" name="senha" id="senha" [(ngModel)]="senha" class="form-control form-control-lg" />
+                    <label class="form-label" for="senha">Senha</label>
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                    <button class="btn btn-dark btn-lg btn-block" type="submit" (click)="login()">Login</button>
                   </div>
 
                   <a class="small text-muted" routerLink="esqueceu-senha" href="esqueceu-senha">Esqueceu a senha?</a>
                   <p class="mb-5 pb-lg-2" style="color: #393f81;">Não tem uma conta? <a  routerLink="/register" href="register"
                       style="color: #393f81;"> Registre-se</a></p>
-                      
+
                 </form>
 
               </div>
