--- a/src/app/views/tela-professor/tela-professor.component.html
+++ b/src/app/views/tela-professor/tela-professor.component.html
@@ -23,14 +23,12 @@
 
                   <div class="row">
                     <div class="col-md-6">
-                      <button type="button" class="btn btn-dark btn-lg btn-block">Alunos</button>
+                      <button type="button" class="btn btn-dark btn-lg btn-block" (click)="redirectToAluno()">Alunos</button>
                     </div>
                     <div class="col-md-6">
-                      <button type="button" class="btn btn-dark btn-lg btn-block">Modalidades</button>
+                      <button type="button" class="btn btn-dark btn-lg btn-block" (click)="redirectToMod()">Modalidades</button>
                     </div>
-
                   </div>
-
                   </div>
 
 
